# KFS

./: .gitignore  Makefile  README.md  shell.nix
KFS-1/: Cargo.toml
KFS-1/src/: main.rs
kfs1/: KERNEL_EXPLANATION.md  Makefile  shell.nix
kfs1/isodir/boot/grub/: grub.cfg
kfs1/src/: boot.asm  linker.ld
kfs1/src/kernel/: Cargo.toml  i386-unknown-none.json
kfs1/src/kernel/.cargo/: config.toml
kfs1/src/kernel/scripts/: qemu.sh
kfs1/src/kernel/src/: bin.rs  kernel.rs  lib.rs  vga_buffer.rs
kfs1/src/kernel/src/panic/: panic.rs
kfs1/src/kernel/src/qemu/: mod.rs  qemu.rs
kfs1/src/kernel/src/tests/: mod.rs
kfs1/src/kernel/src/vga_buffer/: vga_buffer.rs
src/: idt.asm
src/kernel/: Cargo.toml  grub.cfg
src/kernel/.cargo/: config.toml
src/kernel/scripts/: qemu.sh
src/kernel/src/: kernel.rs
src/kernel/src/builtin/: common_builtin.rs  mod.rs
src/kernel/src/device/: cursor.rs  keyboard.rs  mod.rs  mouse.rs
src/kernel/src/pic8259/: mod.rs  pic8259.rs  port.rs
src/kernel/src/tests/: mod.rs
src/kernel/src/tty/: tty.rs
src/kernel/src/vga_buffer/: mod.rs  vga_buffer.rs
src/kernel/src/x86/: gdt.rs  idt.rs  mod.rs
