[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
opt-level = 2
strip = true
codegen-units = 1

[dependencies]
volatile = "0.2.6"
spin = "0.10.0" # spinning mutex : dont block, instead try to lock it again and again taht buring cpu time

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
